--- a/.eslintrc
+++ b/.eslintrc
@@ -55,8 +55,9 @@
     "space-before-blocks": 1,
     "no-empty": 1,
 
-    "space-before-function-parentheses": [1, "never"],
+    "space-before-function-parentheses": [1, "always"],
     "wrap-iife": 1,
+    "func-style": [2, "expression"],
 
     "space-in-brackets": [1, "never"],
     "space-in-parens": [1, "never"],
