really fix onBlur bug

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "sinon-chai": "^2.7.0",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
+  },
+  "dependencies": {
+    "object-assign": "^2.0.0"
   }
 }
