Move lint out of gulp

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "mocha": true
   },
   "parser": "babel-eslint",
+  "plugins": ["react"],
   "ecmaFeatures": {
     "arrowFunctions": true,
     "binaryLiterals": true,
