--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "karma-webpack": "^1.5.0",
     "mocha": "^2.2.1",
     "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.0",
+    "react-dom": "^0.14.0",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0",
     "webpack": "^1.5.3",
