--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^2.7.0",
     "jsx-loader": "^0.12.2",
-    "karma": "~0.12.21",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-mocha": "^0.1.10",
-    "karma-mocha-reporter": "^1.0.2",
-    "karma-phantomjs-launcher": "~0.1.3",
-    "karma-phantomjs-shim": "^1.0.0",
-    "karma-script-launcher": "~0.1.0",
-    "karma-sinon-chai": "^0.3.0",
-    "karma-webpack": "^1.5.0",
+    "karma": "^0.13.13",
+    "karma-babel-preprocessor": "^5.2.2",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-shim": "^1.1.1",
+    "karma-script-launcher": "^0.1.0",
+    "karma-sinon-chai": "^1.1.0",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.2.1",
+    "phantomjs": "^1.9.18",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0",
