--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "examples": "webpack-dev-server --config examples/webpack.config.js --no-info --content-base examples/",
-    "lib": "rimraf lib && babel --stage 0 src/ -d lib/",
+    "lib": "rimraf lib && babel src --out-dir lib",
     "lint": "eslint src/select.jsx",
     "prepublish": "npm run lib",
     "test": "karma start"
@@ -13,8 +13,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^2.0.2",
-    "babel-loader": "^4.3.0",
+    "babel-eslint": "^6.0.2",
+    "babel-loader": "^6.2.4",
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-react": "^6.0.0",
+    "babel-preset-stage-0": "^6.0.0",
     "chai": "^2.1.2",
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^2.7.0",
@@ -32,18 +36,17 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.2.1",
     "phantomjs": "^1.9.18",
-    "react": "^0.14.0",
+    "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.0",
-    "react-dom": "^0.14.0",
+    "react-dom": "^0.14.7",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
-    "babel": "^5.6.14",
-    "babel-core": "^4.7.16",
-    "object-assign": "^2.0.0",
+    "babel-core": "^6.7.4",
+    "object-assign": "^4.0.0",
     "rimraf": "^2.4.1"
   }
 }
