--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.5.1",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
-    "babel-cli": "^6.5.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-0": "^6.0.0",
-    "chai": "^2.1.2",
+    "chai": "^4.0.2",
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^2.7.0",
     "jsx-loader": "^0.12.2",
@@ -29,23 +30,23 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-phantomjs-shim": "^1.1.1",
     "karma-script-launcher": "^0.1.0",
     "karma-sinon-chai": "^1.1.0",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.2.1",
-    "phantomjs": "^1.9.18",
-    "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.0",
-    "react-dom": "^0.14.7",
-    "sinon": "^1.14.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "sinon": "^4.0.0",
     "sinon-chai": "^2.7.0",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
     "babel-core": "^6.7.4",
+    "create-react-class": "^15.6.2",
     "object-assign": "^4.0.0",
     "rimraf": "^2.4.1"
   }
